--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.0",
+    "axios": "^1.2.2",
     "codemirror": "^6.0.1",
     "vue": "^3.2.38",
     "vue-codemirror": "^6.1.1"
@@ -31,6 +32,7 @@
     "typescript": "~4.7.4",
     "vfonts": "^0.0.3",
     "vite": "^3.0.9",
+    "vite-plugin-top-level-await": "^1.2.2",
     "vue-tsc": "^0.40.7"
   }
 }
